--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,16 @@ colors:
 2. 353535 - Graphite
 3. D2D7DF - Pale State
 */
-
 .banner {
   display: flex;
   width: 100%;
-  height: 20%;
+  height: 30%;
   background-color: #D2D7DF;
 }
 
 .btn {
-  width: 10%;
-  height: 80%;
+  width: 5%;
+  height: 60%;
   background-color: white;
-  
+  font: 75%;
 }
