--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,129 @@
 /*
 colors:
-1. FFFFFF - White
-2. 353535 - Graphite
-3. D2D7DF - Pale State
+1. e2dbe9 - Cards
+2. 6B6570 - Dim Grey
+3. A8BA9A - Dry Sage
+4. F9ADA0 - Powder Blush
+4.5. af7e75 - sub text
+5. 1A090D - Coffee Bean
 */
+
+html, body {
+  font-family: "Lucida Monospace";
+  background-color: #1A090D;
+  color: #1A090D;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+}
+
 .banner {
   display: flex;
-  width: 100%;
-  height: 30%;
-  background-color: #D2D7DF;
-  margin: 10 right;
+  justify-content: center;
+  align-items: center;
+
+  height: 3rem;
+  width: 90%;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+  border-radius: 10px;
+  background-color: #6B6570;
+}
+
+.std-view {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn {
-  width: 5%;
-  height: 60%;
-  background-color: white;
-  font: 75%;
+  border: 2px;
+  height: 80%;
+  width:fit-content;
+  min-width: 3rem;
+  background-color: #6B6570;
+  font: 1.5rem;
+  margin-right: 1%;
+  border-radius: 10px;
+}
+
+.btn:hover {
+  background-color: #A8BA9A;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+
+  padding: 1rem;
+
+  border-style: solid;
+  border-color: #F9ADA0;
+  border-width: 2px;
+  border-radius: 20px;
+
+  width:100%;
+
+  font-size: 3rem;
+
+  justify-content: center;
+  align-items: center;
+  background-color: #e2dbe9;
+
+}
+
+.card-title {
+  text-align: center;
+  font-size: 80%;
+  margin-bottom: 0;
+}
+
+.card-p {
+  color: #af7e75;
+  font-size: 1.4rem;
+
+  text-align: center;
+  
+  width: 60%;
+}
+
+.page-content {
+  display: block;
+
+  font-size: 18px;
+  background-color: #6B6570;
+  padding-bottom: 2rem;
+  margin-bottom: 1rem;
+}
+
+ul {
+  color: white;
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+p {
+  color: white;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.me {
+  width: 15rem;
+  height: 20rem;
+  object-fit: cover;
+  border-radius: 10px;
+
+  margin-bottom: -2rem;
+}
+
+footer {
+  color: rgb(225, 225, 225);
 }
