Updated styles and cards.

--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,15 @@ html, body {
   justify-content: center;
   align-items: center;
 
+  top: 0vh;         
+  left: 50vw - size;           
+  z-index: 1000;   
+
+  position: sticky;
+
   height: 3rem;
-  width: 90%;
-  margin-top: 1.5rem;
+  width: 80vw;
+  margin-top: 2rem;
   margin-bottom: 1rem;
   border-radius: 10px;
   background-color: #6B6570;
@@ -41,26 +47,48 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  margin-top: 1rem;
 }
 
 .btn {
+  color: #1A090D;
+
   border: 2px;
-  height: 80%;
+  min-height: 80%;
   width:fit-content;
   min-width: 3rem;
   background-color: #6B6570;
-  font: 1.5rem;
+  font-size: 1rem;
   margin-right: 1%;
   border-radius: 10px;
+
+  transition: transform 0.5s ease-in-out;
 }
 
 .btn:hover {
   background-color: #A8BA9A;
+  transform: scale(1.2);
+}
+
+.page-content {
+  display: block;
+  padding-left: 1rem;
+  font-size: 18px;
+  background-color: #6B6570;
+  padding-bottom: 2rem;
+  margin-bottom: 1rem;
+
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+  transition: transform 0.25s ease-in-out;
 }
 
 .card {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2rem;
 
   padding: 1rem;
 
@@ -69,14 +97,25 @@ html, body {
   border-width: 2px;
   border-radius: 20px;
 
-  width:100%;
+  width: 80vw;
 
   font-size: 3rem;
 
   justify-content: center;
   align-items: center;
+
   background-color: #e2dbe9;
 
+  transition: transform 0.5s ease-in-out;
+}
+
+.card:hover .page-content {
+  height: fit-content;
+  opacity: 1;
+}
+
+.card:hover {
+  transform: scale(1.05);
 }
 
 .card-title {
@@ -90,17 +129,7 @@ html, body {
   font-size: 1.4rem;
 
   text-align: center;
-  
   width: 60%;
-}
-
-.page-content {
-  display: block;
-
-  font-size: 18px;
-  background-color: #6B6570;
-  padding-bottom: 2rem;
-  margin-bottom: 1rem;
 }
 
 ul {
@@ -115,6 +144,16 @@ p {
   padding-right: 2rem;
 }
 
+.project-banner {
+  display: flex;
+  
+}
+
+.images {
+  display: flex;
+  gap: 1rem;
+}
+
 .me {
   width: 15rem;
   height: 20rem;
@@ -122,6 +161,30 @@ p {
   border-radius: 10px;
 
   margin-bottom: -2rem;
+}
+
+.imgNoBella {
+  width: 20rem;
+  height: 10rem;
+  object-fit: cover;
+
+  border-radius: 10px;
+
+  margin-bottom: -2rem;
+}
+
+.imgMamaKids {
+  width: 10rem;
+  height: 10rem;
+  object-fit: cover;
+
+  border-radius: 10px;
+
+  margin-bottom: -2rem;
+}
+
+h4 {
+  color: white;
 }
 
 footer {
