--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ html, body {
 
   height: fit-content;
   width: fit-content;
+  min-width: 80vw;
   margin-top: 2rem;
   margin-bottom: 1rem;
   border-radius: 1rem;
